testcases/ShouldFail/ParseErrors/BrokenLex3.java
class BrokenLex3 {
	public static void main(String[] a) {
		y = a[1] > 0;
		System.out.println(y);
	}
}

class T {
  int f() {
    return0;
  }
